fix(homepage): reduce spacing from 6rem to 4rem

--- a/src/components/pages/homepage/latest-totals.module.scss
+++ b/src/components/pages/homepage/latest-totals.module.scss
@@ -42,14 +42,14 @@
 
 .container {
   max-width: 900px;
-  margin: 6rem auto;
+  margin: 4rem auto;
 }
 
 .header-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 6rem;
+  margin-top: 4rem;
   * {
     margin-top: 0;
     margin-bottom: 0;
